<resources>
    <string name="banner_ad_unit_id_settings">ca-app-pub-9739423982134028/2074183996</string>
    <string name="banner_ad_unit_id_home">ca-app-pub-9739423982134028/6225181990</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">设置</string>
    <string name="refresh">更新</string>
    <string name="action_view_in_browser">在浏览器中查看</string>
    <string name="action_view_comments">评论</string>
    <string name="support" formatted="false">支持%s</string>
    <string name="oppose" formatted="false">反对%s</string>
    <string name="comment">评论</string>
    <string name="pref_comment_order">优先显示最新评论</string>
    <string name="pref_comment">评论设置</string>
    <string name="settings">设置</string>
    <string name="pref_other">其他</string>
    <string name="pref_about">关于与反馈</string>
    <string name="about">关于与反馈</string>
    <string name="about_description">享受阅读 享受cnBeta</string>
    <string name="navdrawer_item_news_artices">最新资讯</string>
    <string name="navdrawer_item_recommend_comment">热门评论</string>
    <string name="navdrawer_item_top_comments">今日热评</string>
    <string name="navdrawer_item_top_counter">今日焦点</string>
    <string name="navdrawer_item_top10">新闻Top10</string>
    <string name="navdrawer_item_topic">新闻主题</string>
    <string name="navdrawer_item_top_dig">推荐资讯</string>
    <string name="font_fontFamily_medium">sans-serif-medium</string>
    <string name="placeholder_lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="navdrawer_item_settings">设置</string>
    <string name="navdrawer_item_about">关于和反馈</string>
    <string name="navigation_drawer_open">打开</string>
    <string name="navigation_drawer_close">关闭</string>
    <string name="drawer_title">@string/app_name</string>
    <string name="navdrawer_item_top">排行</string>
    <string name="top_counter">今日最多阅读</string>
    <string name="top_comments">今日热评</string>
    <string name="top_dig">热门推荐</string>
    <string name="top_top10">月度Top10</string>
    <string name="top_title">排行</string>
    <string name="no_data">无法加载, 点击刷新(也许是cnBeta关评论了)</string>
    <string name="empty_data">暂无数据</string>
    <string name="empty_comment">没有评论(应该是被cnBeta清空了)</string>
    <string name="no_comment">暂时还没有评论</string>
    <string name="share">分享到其他…</string>
    <string name="press_again">再按一次退出</string>
    <string name="top_comments_fragment_title">热门评论</string>
    <string name="publish_sub">发表于</string>
    <string name="pref_image">流量控制</string>
    <string name="pref_autoload_image_in_webview">正文图片</string>
    <string name="topic">类别</string>
    <string name="pref_autoload_image_in_list">列表图片</string>
    <string name="pref_autoload_image_in_list_key">pref_autoload_image_in_list</string>
    <string name="pref_autoload_image_in_webview_key">pref_autoload_image_in_webview</string>
    <string name="toggle_image">无图模式(非Wifi)</string>
    <string name="pref_autoload_image_in_webview_summary">2G/3G/4G下是否自动加载正文图片</string>
    <string name="pref_autoload_image_in_list_summary">是否展示列表页缩略图</string>
    <string name="about_version">最求美好</string>
    <string name="action_save_pic">保存图片</string>
    <string name="pref_open_image_folder_key">pref_open_image_folder</string>
    <string name="pref_open_image_folder">打开保存的图片</string>
    <string name="menu_share">分享</string>
    <string name="favorite">我的收藏</string>
    <string name="delete">删除</string>
    <string name="add_favorite">收藏</string>
    <string name="pref_style">显示风格</string>
    <string name="pref_list_style_key">pref_list_style</string>
    <string name="pref_list_style">列表风格</string>
    <string name="pref_card_style">卡片风格</string>
    <string name="list_style_dialog_title">选择列表显示风格</string>
    <string name="load_more">点击加载更多</string>
    <string name="favorite_success">收藏成功</string>
    <string name="pref_autoload_when_start_key">pref_autoload_when_start</string>
    <string name="pref_autoload_when_start">自动刷新</string>
    <string name="pref_autoload_when_start_summary">打开列表时自动更新列表</string>
    <string name="big_font">增大字号</string>
    <string name="small_font">减小字号</string>
    <string name="search_hint">搜索主题</string>
    <string name="all_topics">全部主题</string>
    <string name="support_success">支持成功, 可能需要过一会生效</string>
    <string name="against_success">反对成功, 可能需要过一会生效</string>
    <string name="pref_autoload_when_scroll_key">pref_autoload_when_scroll</string>
    <string name="pref_autoload_when_scroll">列表滚动时</string>
    <string name="pref_autoload_when_scroll_summary">列表滚动时自动加载更多</string>
    <string name="topic_title">主题</string>
    <string name="action_add_comment">添加评论</string>
    <string name="write_something">写点内容吧…</string>
    <string name="err_no_token">正在获取Token,暂时无法发送评论,请稍等片刻再试</string>
    <string name="err_captcha">获取验证码失败</string>
    <string name="captcha_title">验证码</string>
    <string name="input_captcha">输入验证码</string>
    <string name="empty_content_or_captcha">验证码或内容为空, 请填写</string>
    <string name="send_comment_ok">评论成功, 可能要稍后生效, 有小几率被吞评论</string>
    <string name="send_comment_fail">评论失败,可能是验证码错了,也可能是网络问题</string>
    <string name="pref_use_web_api_key">pref_use_web_api</string>
    <string name="show_hidden_comment">隐藏评论</string>
    <string name="floor">楼</string>
    <string name="pref_advanced">高级设置</string>
    <string name="pref_use_web_api">使用网页接口</string>
    <string name="pref_use_web_api_summary">评论页使用网站所使用的接口, 可以实现盖楼, 如果评论一直失效或者崩溃, 请关闭此选项</string>
    <string name="action_refresh">刷新</string>
    <string name="share_fail">数据获取失败,无法分享</string>
    <string name="navdrawer_item_night">切换主题</string>
    <string name="pref_use_elapse_time_key">pref_use_elapse_time</string>
    <string name="pref_use_elapse_time">使用\"xx前\"</string>
    <string name="pref_use_elapse_time_summary">时间显示成\"xx前\",如: 3小时前, 刷新列表后生效</string>
    <string name="pref_show_ad_in_settings_key">pref_show_ad_in_settings</string>
    <string name="pref_show_ad_in_settings">在设置页显示广告</string>
    <string name="pref_show_ad_in_settings_summary">设置页里放个小广告， 你可以随时关闭这个广告哦，不过作者很希望您能保留这个广告，写码不易，且行且珍惜 :)</string>
    <string name="pref_show_ad_in_home_key">pref_show_ad_in_home</string>
    <string name="pref_show_ad_in_home">首页广告</string>
    <string name="pref_show_ad_in_home_summary">如果你觉得广告不影响你的心情或着使用的话，可以打开首页广告支持作者</string>
    <string name="title_activity_fullscreen_video">FullscreenVideoActivity</string>
    <string name="pref_use_web_data_key">pref_use_web_data</string>
    <string name="pref_use_web_data">直接抓取页面数据</string>
    <string name="pref_use_web_data_summary">直接从PC版页面抓取内容，可以保证视频内容不丢失，如果新闻阅读页出现问题，请尝试关闭这个选项</string>
    <string name="share_moments">分享到朋友圈</string>
    <string name="send_to_wechat">发送给微信好友</string>
    <string name="wx_errcode_success">分享成功</string>
    <string name="wx_errcode_cancel">取消分享</string>
    <string name="wx_errcode_deny">验证失败</string>
    <string name="wx_errcode_unknown">未知错误</string>
</resources>
